<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAnnouncement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dpp_12"
            android:background="@drawable/rounded_bg"
            android:layout_marginRight="@dimen/dpp_12"
            android:id="@+id/userPhoto" />

        <EditText
            android:id="@+id/titleText"
            style="@style/EditTextStyle"
            android:layout_marginVertical="@dimen/verticalText"
            android:drawableLeft="@drawable/ic_baseline_app_registration_24"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/messageText"
            style="@style/EditTextStyle"
            android:layout_marginVertical="@dimen/verticalText"
            android:drawableLeft="@drawable/baseline_arrow_forward_24"
            android:hint="@string/message" />

        <TextView
            android:id="@+id/dateText"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/baseline_date_24"
            android:layout_marginVertical="@dimen/verticalText"
            android:hint="@string/end_date" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>
