<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dpp_12"
                android:background="@drawable/rounded_bg"
                android:layout_marginRight="@dimen/dpp_12"
                android:id="@+id/userPhoto" />

            <TextView
                android:id="@+id/nameText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_name_surname"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/surNameText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_name_surname"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/surName" />


            <TextView
                android:id="@+id/phoneNumberText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_local_phone_24"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/phoneNumber"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/emailText"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/email"
                android:drawableLeft="@drawable/baseline_email_24"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/workText"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/work_info_country_city_company"
                android:drawableLeft="@drawable/baseline_work_24"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/socialMedia"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="Not Shared Social Media Info"
                android:drawableLeft="@drawable/baseline_insert_emoticon_24"
                android:inputType="textEmailAddress"/>

            <Spinner
                style="@style/EditTextStyle"
                android:clickable="false"
                android:layout_marginVertical="@dimen/verticalText"
                android:id="@+id/gradOption"
                android:entries = "@array/optionArray"
                android:layout_marginLeft="@dimen/centerilaze"/>


        </LinearLayout>
    </ScrollView>

</layout>